syntax = "proto3";

package orders;

service OrderService {
  rpc GetLists (Options) returns (ListOrders) {};
  rpc CreateOrder (CreateOrderReq) returns (Order) {};
  rpc CancelOrder (OrderById) returns (Order) {};
  rpc CheckStatus (OrderById) returns (OrderStatus) {};
}

message OrderById {
  int32 order_id = 1;
}

message CreateOrderReq {
  string customer_name = 1;
  double amount_money = 2;
}
message Order {
  int32 order_id = 1;
  string customer_name = 2;
  double amount_money = 3;
  string status = 4;
  string created_at = 5;
  string updated_at = 6;
}

message OrderStatus {
  string status = 1;
}

message Options {
  int32 page = 1;
  int32 perPage = 2;
}

message ListOrders {
  int32 page = 1;
  int32 perPage = 2;
  int32 total = 3;
  int32 lastPage = 4;
  repeated Order data = 5;
}